# 0.00.23 (44668) Oct 4, 2010
10/4/10 increase max field lines to 900, per Noah P
10/4/10 first working version of excess dielectric charge view
10/4/10 use better plate charge layout strategy, developed by Sam Reid
10/4/10 factor out nodes for positive and negative charges
10/4/10 first pass at excess dielectric charge, not working yet
# 0.00.22 (44657) Oct 4, 2010
10/4/10 make spacing between e-field lines change continuously as E_effective changes
10/4/10 only update views (charges, field) when visible
# 0.00.21 (44648) Oct 4, 2010
10/4/10 demo new field density algorithm
10/4/10 smaller arrows on field lines
10/4/10 compute field density based on minimum plate area, not based on plate side length
10/4/10 simplify PlateChargeNode.getNumberOfCharges
10/4/10 remove Multiple Capacitors tab, will be included in a future (post 1.0?) version
10/4/10 check in new (larger) e-field probe image created by Noah P
10/1/10 get rid of "non-zero minimum" for E-field lines, it's not doing anything but complicating computations
# 0.00.20 (44619) Oct 1, 2010
10/1/10 fix: density (not number) of field lines is proportional to E_effective
10/1/10 make physical parts of the capacitor transparent when E-field, Voltmeter or Field Detector is selected
10/1/10 add placeholder node for E-Field Detector, wire up visibility to control panel
10/1/10 check in field detector probe image created by Noah P
10/1/10 change "Field Detector" to "Electric Field Detector"
# 0.00.19 (44601) Oct 1, 2010
10/1/10 demonstrate E-field lines
10/1/10 make capacitor plates and dielectric transparent when E-field is selected
10/1/10 add E-field view
10/1/10 move responsibility for dielectric color into DielectricNode
# 0.00.18 (44586) Sep 30, 2010
9/30/10 demo fix to current indicator, and improved plate charge layout
9/30/10 add margin along z axis for plate charges, hack to keep them on the plate with 3D perspective
9/30/10 keep plate charges from falling off the edges of the plate