@@ -95,7 +95,6 @@ public class CLConstants {
     
     // dielectric charges
     public static final DielectricChargeView DIELECTRIC_CHARGE_VIEW = DielectricChargeView.NONE; //XXX default should be NONE
-    public static final IntegerRange NUMBER_OF_EXCESS_DIELECTRIC_CHARGES = new IntegerRange( 1, 100 );
     
     // E-field
     public static final boolean EFIELD_VISIBLE = false;
