@@ -1,3 +1,6 @@
+10/4/10 use the same min/max for representing top plate charge and dielectric excess charge
+10/4/10 make number of excess charges on dielectric proportional to sqrt(Q_excess_dielectric)
+10/4/10 move plate charge grid strategy into its own top-leve class file
 # 0.00.23 (44668) Oct 4, 2010
 10/4/10 increase max field lines to 900, per Noah P
 10/4/10 first working version of excess dielectric charge view
